--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,6 +7,8 @@
     <!-- Tailwind CSS with DaisyUI CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/htmx.org"></script>
+
     <script>
         tailwind.config = {
             plugins: [daisyui],
@@ -17,14 +19,14 @@
     </script>
 </head>
 <body class="bg-base-200 text-base-content">
-    <!-- Navbar -->
-    {% include "partials/nav.html" %}
+<!-- Navbar -->
+{% include "partials/nav.html" %}
 
-    <!-- Main Content -->
-    <div class="container mx-auto py-6">
-        {% block content %}
+<!-- Main Content -->
+<div class="container mx-auto py-6">
+    {% block content %}
 
-        {% endblock %}
-    </div>
+    {% endblock %}
+</div>
 </body>
 </html>
