--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -18,7 +18,7 @@
         };
     </script>
 </head>
-<body class="bg-base-200 text-base-content">
+<body class="bg-base-200 text-base-content vh-100">
 <!-- Navbar -->
 {% include "partials/nav.html" %}
 
