--- a/src/templates/partials/nav.html
+++ b/src/templates/partials/nav.html
@@ -1,13 +1,45 @@
-<!-- templates/partials/navbar.html -->
-<nav class="navbar bg-base-100 shadow-md px-4">
-    <div class="flex-1">
-        <a href="/" class="text-xl font-bold">Audit Deez Nutz</a>
-    </div>
-    <div class="flex-none">
-        <ul class="menu menu-horizontal px-1">
-            <li><a href="/">Home</a></li>
-            <li><a href="{% url 'federal_calculator' %}">Federal Tax Calculator</a></li>
-            <li><a href="{% url 'state_calculator' %}">State Tax Calculator</a></li>
-        </ul>
-    </div>
+<!-- Navbar for medium and larger devices -->
+<nav class="navbar bg-base-100 shadow-md px-4 hidden md:flex">
+  <div class="flex-1">
+    <a href="/" class="text-xl font-bold">Audit Deez Nutz</a>
+  </div>
+  <div class="flex-none">
+    <ul class="menu menu-horizontal px-1">
+      <li><a href="/">Home</a></li>
+      <li><a href="{% url 'federal_calculator' %}">Federal Tax Calculator</a></li>
+      <li><a href="{% url 'state_calculator' %}">State Tax Calculator</a></li>
+    </ul>
+  </div>
 </nav>
+
+<!-- Navbar for small devices -->
+<div class="navbar bg-base-100 md:hidden">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+        <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-5 w-5"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor">
+          <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h7"></path>
+        </svg>
+      </div>
+      <ul
+          tabindex="0"
+          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+        <li><a href="/">Home</a></li>
+        <li><a href="{% url 'federal_calculator' %}">Federal Tax Calculator</a></li>
+        <li><a href="{% url 'state_calculator' %}">State Tax Calculator</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="navbar-center">
+    <a class="btn btn-ghost text-xl">Audit Deez Nutz</a>
+  </div>
+</div>
