--- a/src/templates/partials/nav.html
+++ b/src/templates/partials/nav.html
@@ -1,7 +1,7 @@
 <!-- Navbar for medium and larger devices -->
-<nav class="navbar bg-base-100 shadow-md px-4 hidden md:flex">
+<nav class="navbar bg-base-200 shadow-md px-4 hidden md:flex">
   <div class="flex-1">
-    <a href="/" class="text-xl font-bold">Audit Deez Nutz</a>
+    <a href="/" class="text-xl font-bold">OverTaxed</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
@@ -40,6 +40,6 @@
     </div>
   </div>
   <div class="navbar-center">
-    <a class="btn btn-ghost text-xl">Audit Deez Nutz</a>
+    <a class="btn btn-ghost text-xl">OverTaxed</a>
   </div>
 </div>
