--- a/src/templates/partials/home.html
+++ b/src/templates/partials/home.html
@@ -23,10 +23,10 @@
       </div>
     </div>
 
-{#    <p class="text-sm text-gray-500">#}
-{#      This website is not affiliated with or endorsed by any government agency. Calculations are for#}
-{#      informational purposes only and should not be considered official tax advice.#}
-{#    </p>#}
+    <p class="text-sm text-gray-500">
+      This website is not affiliated with or endorsed by any government agency. Calculations are for
+      informational purposes only and should not be considered official tax advice.
+    </p>
   </div>
 
 {% endblock %}
