--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,9 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
-  <script src="https://unpkg.com/htmx.org"></script>
   <link rel="stylesheet" href="{% static '/css/output.css' %}">
-
+  <script src="{% static '/js/htmx.min.js' %}"></script>
 </head>
 <body class="text-base-content h-screen">
 <!-- Navbar -->
