Basic state tax calculation logic added. Still needs work.

--- a/src/templates/pages/federal/federal-results.html
+++ b/src/templates/pages/federal/federal-results.html
@@ -9,7 +9,7 @@
 
 <div id="tax-result" class="lg:w-1/2 mt-4 lg:mt-0 rounded-lg">
   {% if tax is not None %}
-    <div class="alert alert-warning shadow-lg" style="background-color: #fd855a">
+    <div class="alert alert-warning shadow-lg" style="background-color: #737ffd">
       <span style="text-align: start !important;">
         For the {{ year }} tax year, we estimate you will owe
         <strong>
