--- a/src/templates/partials/federal-calc-mockup.html
+++ b/src/templates/partials/federal-calc-mockup.html
@@ -81,7 +81,7 @@
 
     <!-- Hardcoded Results Section -->
     <div id="tax-result" class="lg:w-1/2 mt-4 lg:mt-0 rounded-lg">
-      <div class="alert alert-warning shadow-lg" style="background-color: #fd855a">
+      <div class="alert alert-warning shadow-lg" style="background-color: #737ffd">
         <span style="text-align: start !important;">
           For the 2023 tax year, we estimate you will owe
           <strong>
