--- a/src/templates/partials/home.html
+++ b/src/templates/partials/home.html
@@ -2,7 +2,7 @@
 {% block title %}OverTaxed | Home{% endblock %}
 {% block content %}
 
-  <div class="container mx-auto p-6">
+  <div class="container mx-auto py-6">
     <!-- Flex container -->
     <div class="flex flex-col xl:flex-row gap-8 xl:items-start">
       <!-- Left Column: Main Content -->
