--- a/src/templates/partials/home.html
+++ b/src/templates/partials/home.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 
-  <div class="container mx-auto px-4 py-6">
+  <div class="container mx-auto px-4 py-6 xl:px-16">
     <div class="flex flex-col xl:flex-row gap-8 xl:items-start">
       <div class="flex-1 my-auto">
 
